--- a/package.json
+++ b/package.json
@@ -3,19 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@syncfusion/ej2-base": "^20.3.50",
+    "@syncfusion/ej2-react-buttons": "^20.3.50",
+    "@syncfusion/ej2-react-calendars": "^20.3.50",
+    "@syncfusion/ej2-react-dropdowns": "^20.3.50",
+    "@syncfusion/ej2-react-popups": "^20.3.50",
+    "@syncfusion/ej2-react-schedule": "^20.3.52",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "axios": "^1.1.3",
+    "lodash": "^4.17.21",
+    "material-ui-chip-input": "^1.1.0",
+    "moment": "^2.29.4",
+    "notistack": "^2.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "pretest": "eslint src/*.js src/**/*.js src/**/*.jsx",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretest -- --fix && git add ."
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +66,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "sass": "^1.49.4",
+    "typescript": "^4.8.4"
   }
 }
