--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
-  "name": "steamedsamosa-vendor",
+  "name": "raahee_mhp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.11",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.7.2",
-    "@syncfusion/ej2-base": "^20.3.50",
-    "@syncfusion/ej2-react-buttons": "^20.3.50",
-    "@syncfusion/ej2-react-calendars": "^20.3.50",
-    "@syncfusion/ej2-react-dropdowns": "^20.3.50",
-    "@syncfusion/ej2-react-popups": "^20.3.50",
-    "@syncfusion/ej2-react-schedule": "^20.3.52",
+    "@syncfusion/ej2-base": "^19.4.48",
+    "@syncfusion/ej2-react-buttons": "^19.4.55",
+    "@syncfusion/ej2-react-calendars": "^19.4.50",
+    "@syncfusion/ej2-react-dropdowns": "^19.4.50",
+    "@syncfusion/ej2-react-popups": "^19.4.53",
+    "@syncfusion/ej2-react-schedule": "^19.4.50",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "axios": "^1.1.3",
+    "axios": "^0.25.0",
+    "babel-register": "^6.26.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "lodash": "^4.17.21",
     "material-ui-chip-input": "^1.1.0",
-    "moment": "^2.29.4",
+    "moment": "^2.29.1",
     "notistack": "^2.0.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.8",
-    "redux": "^4.2.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.5.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "pretest": "eslint src/*.js src/**/*.js src/**/*.jsx",
-    "eject": "react-scripts eject"
+    "pretest": "eslint src/*.js src/**/*.js src/**/*.jsx"
   },
   "husky": {
     "hooks": {
@@ -74,14 +83,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "sass": "^1.49.4",
-    "typescript": "^4.8.4"
+    "typescript": "^4.5.5"
   }
 }
