--- a/package.json
+++ b/package.json
@@ -92,5 +92,8 @@
     "husky": "^7.0.4",
     "sass": "^1.49.4",
     "typescript": "^4.5.5"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
